welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: value getMondeLargeur is not a member of Int
    for (i <- 1 getMondeLargeur() - 1) {
                ^ZigZag:14: error: value - is not a member of Unit
    for (i <- 1 getMondeLargeur() - 1) {
                                  ^ZigZag:15: error: not found: value GetMondeLargeur
      setPos(GetMondeLargeur() - 1 - i, compt / getMondeHauteur())
             ^