welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
  doTheSnakyThing()
}

def doTheSnakyThing() {
  var compt:Int = 0
  while ((getX(), getY()) != (getMondeLargeur() - 1, getMondeHauteur() - 1)) {
    pasDeSerpent(compt)
  }
}

def pasDeSerpent(compt:Int) {  
  if (getX() == getMondeLargeur() - 1) {
    setPos(getMondeLargeur() - 1, compt / getMondeHauteur())
    for (i <- 1 getMondeLargeur() - 1) {
      setPos(GetMondeLargeur() - 1 - i, compt / getMondeHauteur())
      ecritMessage(""+compt) 
    }
  }
  if (getX() == 0) {
    ecritMessage(""+compt)
    for (i <- 1 to getMondeLargeur() - 1) {
      setPos(i, compt / getMondeHauteur())
      ecritMessage(""+compt)
    }
  }
}